added the get task by list api
